--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,8 @@ a {
   font-size: 1.125em;
   font-weight: bold;
   padding-left: 15px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .intro button {
@@ -114,6 +116,8 @@ a {
   font-weight: bold;
   width: 200px;
   text-transform: uppercase;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .intro img {
@@ -123,7 +127,7 @@ a {
 /* Infos */
 
 .info {
-  padding: 60px 0;
+  padding: 60px 0 90px 0;
   position: relative;
 }
 
@@ -252,4 +256,196 @@ a {
 
 .lista-info p:last-child{
   margin-top: 30px;
+}
+
+/* Aulas */
+
+.aulas {
+  background: #EFF4F9;
+  padding: 60px 0;
+  position: relative;
+}
+
+.aulas h2 {
+  text-align: center;
+  font-family: Alice, serif;
+  font-size: 4.5em;
+  margin-bottom: 60px;
+}
+
+.aulas h2::before {
+  content: '';
+  width: 174px;
+  height: 67px;
+  background: url('../img/ondas.svg');
+  position: absolute;
+  top: -30px;
+}
+
+.aulas > div > div {
+  background: #fff;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0px 5px 5px rgba(187, 204, 221, 0.3),
+  			      0px 10px 10px rgba(187, 204, 221, 0.2)	;
+}
+
+.infantil::before {
+  content: '';
+  width: 21.02px;
+  height: 37.29px;
+  background: url('../img/surfbot-icon.svg');
+  position: absolute;
+  top: -18.6px;
+  left: 174px;
+}
+
+.adulto::before {
+  content: '';
+  width: 52px;
+  height: 37.29px;
+  background: url('../img/surfbot-icon.svg');
+  background-repeat: space;
+  position: absolute;
+  top: -18.6px;
+  left: 159px;
+}
+
+.profissional::before {
+  content: '';
+  width: 85px;
+  height: 37.29px;
+  background: url('../img/surfbot-icon.svg');
+  background-repeat: space;
+  position: absolute;
+  top: -18.6px;
+  left: 142px;
+}
+
+
+.aulas h3 {
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-top: 37px;
+}
+
+.aulas > div > div ul, 
+.aulas > div > div p, 
+.aulas > div > div a {
+  margin-left: 70px;
+}
+
+.aulas ul::before {  
+  display: block;
+  content: '';
+  width: 230px;
+  height: 2px;
+  background: #eff4f9;
+  margin: 30px 0;
+}
+
+.aulas ul::after {  
+  display: block;
+  content: '';
+  width: 230px;
+  height: 2px;
+  background: #eff4f9;
+  margin: 30px 0 15px 0;
+}
+
+.aulas li {
+  font-size: 0.875em;
+}
+
+.aulas li::before {
+  content: '';
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  background: #fff;
+  border: 2.5px solid #FF3726;
+  border-radius: 50%;
+  margin-right: 7px;
+  margin-bottom: 1px;
+}
+
+.aulas > div > div p {
+  font-size: 0.875em;
+  font-weight: bold;
+  color: #1188EE;
+  margin-bottom: 30px;
+}
+
+.aulas > div > div a {
+  display: block;
+  font-size: 1.125em;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  background: #445566;
+  max-width: 230px;
+  padding: 10px 15px;
+  margin-bottom: 30px;
+  border-radius: 5px;
+}
+
+.aulas > div > div a::before, .aulas > div > div a::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.aulas > div > div a img {
+  float: right;
+  margin-top: 5px;
+}
+
+.desconto {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 1.125em;
+}
+
+.desconto_pessoa {
+  font-weight: bold;
+  color: #FF3726;
+}
+
+.desconto_contato {
+  display: inline-block;
+}
+
+.desconto_contato::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #FF3726;
+}
+
+/* Quote */
+
+.quote {
+  padding: 140px 0;
+  background: url('../img/foto-quote.jpg') no-repeat center;
+  background-size: cover;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.fala {
+  display: inline-block;
+  font-family: Alice, serif;
+  font-size: 4.5em;
+  max-width: 640px;
+  color: #fff;
+  margin-bottom: 30px;
+}
+
+.autor {
+  color: #fff;
+  font-size: 1.125em;
+  font-weight: bold;
 }
