--- a/css/style.css
+++ b/css/style.css
@@ -449,3 +449,115 @@ a {
   font-size: 1.125em;
   font-weight: bold;
 }
+
+/* Contato */
+
+.contato {
+  padding: 60px 0;
+  position: relative;
+}
+
+.contato h2 {
+  font-size: 4.5em;
+  font-family: Alice, serif;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.contato .form {
+  margin-right: 70px;
+  border-right:  2px solid #eff4f9;
+}
+
+.contato input {
+  display: block
+}
+
+.contato label {
+  font-size: 1.125em;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.contato input {
+  border: none;
+  width: 470px;
+  height: 50px;
+  background: #eff4f9;
+  margin-bottom: 15px;
+}
+
+.contato input#mensagem {
+  height: 180px;
+  margin-bottom: 30px;
+}
+
+.contato button {
+  display: block;
+  font-size: 1.125em;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  background: #445566;
+  border: none;
+  max-width: 230px;
+  padding: 10px 15px;
+  margin-bottom: 30px;
+  border-radius: 5px;
+}
+
+.info_contato {
+  margin-top: 20px;
+}
+
+.info_contato h3 {
+  font-size: 1.125em;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.info_contato p {
+  font-size: 0.875em;
+}
+
+.endereco a {
+  font-size: 0.875em;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: block;
+  margin-top: 15px;
+}
+
+.endereco a svg {
+  fill: #EE2211;
+  margin-left: 10px;
+}
+
+.endereco::after, .email_telefone::after {
+  content: '';
+  display: block;
+  width: 270px;
+  height: 2px;
+  background: #eff4f9;
+  margin: 15px 0;
+}
+
+.horario {
+  position: relative;
+}
+
+.horario-p::before {
+  content: '';
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  background: #fff;
+  border: 2.5px solid #16C70B;
+  border-radius: 50%;
+  margin-right: 7px;
+  margin-bottom: 1px;
+  position: absolute;
+  left: -10px;
+  margin-top: 6px;
+}
+
